--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,9 +4,21 @@
         <title>Marvel Champions Stats</title>
     </head>
     <body>
-        <h1>Welcome to Marvel Champions Stats</h1>
-        <a href="/index">Home</a>
+        <div>
+            <h1>Welcome to Marvel Champions Stats</h1>
+            <a href={{ url_for('index') }}>Home</a>
+            <a href={{ url_for('login') }}>Login</a>
+        </div>
         <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
     </body>
 </html>
