--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
             <a href="{{ url_for('login') }}">Login</a>
             <a href="{{ url_for('villain') }}">Villain</a>
             <a href="{{ url_for('hero') }}">Hero</a>
+            <a href="{{ url_for('stats') }}">Stats</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
