--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,11 @@
         <div>
             <h1>Welcome to Marvel Champions Stats</h1>
             <a href="{{ url_for('index') }}">Home</a>
+            {% if current_user.is_anonymous %}
             <a href="{{ url_for('login') }}">Login</a>
+            {% else %}
+            <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
             <a href="{{ url_for('villain') }}">Villain</a>
             <a href="{{ url_for('hero') }}">Hero</a>
             <a href="{{ url_for('stats') }}">Stats</a>
