--- a/app/templates/villain_list.html
+++ b/app/templates/villain_list.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Villains</h1>
-    <ul>
-    {% for v in villains %}
-        <li><a href={{ url_for('single_villain', villain_id=v.id) }}>{{ v.name }} ({{ v.phase.phasename }})</a></li>
-    {% endfor %}
-    </ul>
-    <a href={{ url_for('villain_create') }}><button>Add</button></a>
+  <h1>Villains</h1>
+  <ul>
+  {% for v in villains %}
+    <li><a href={{ url_for('single_villain', villain_id=v.id) }}>{{ v.name }} ({{ v.phase.phasename }})</a></li>
+  {% endfor %}
+  </ul>
+  <a href={{ url_for('villain_create') }}><button class="btn btn-primary mb-3" id="add" name="add" type="add" value="Add">Add</button></a>
 {% endblock %}
