--- a/app/templates/villain.html
+++ b/app/templates/villain.html
@@ -1,23 +1,7 @@
 {% extends "base.html" %}
+{% import "bootstrap_wtf.html" as wtf %}
 
 {% block content %}
-    <h1>Villain</h1>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.name.label }}<br>
-            {{ form.name(size=32) }}<br>
-            {% for error in form.name.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.phase.label }}<br>
-            {{ form.phase }}<br>
-            {% for error in form.phase.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
+  <h1>Villain</h1>
+    {{ wtf.quick_form(form) }}
 {% endblock %}
